Revision history for Perl extension MooX-BuildArgs.

{{$NEXT}}

0.08 2019-04-23T18:48:18Z

 - Add clear_build_args() to MooX::BuildArgs.
 - Tidied up POD for MooX::SingleArg.

0.07 2019-03-03T19:11:21Z

 - Fix some POD and dependency issues.
 - Properly extend TRANSFORM_BUILDARGS in ::MethodProxyArgs.
 - Require perl 5.8.1.
 - Simplify VERSION declarations.

0.06 2019-02-14T18:50:14Z

 - Fix a couple PAUSE indexing issues!

0.05 2019-02-14T18:03:13Z

 - Use Data::MethodProxy instead of Config::MethodProxy.
 - Use Test2::V0 instead of Test2::Bundle::Extended.
 - Migrate build tooling from Dist::Zilla to Minilla.

0.04 2016-11-26

 - Correct a typographical and a grammar mistake.
 - Let the proxy args test pass on recent versions of Perl.

0.03 2016-11-09

 - Fix a couple of typographical errors.
 - Switch from Test::Stream to Test2::Suite.
 - Use Config::MethodProxy in MooX::MethodProxyArgs.

0.02 2015-12-29

 - Add MooX::MethodProxyArgs.
 - Use Test::Stream for tests.
 - Make BuildArgsHooks future compatibility tests work if the test
   hooks are called.

0.01 2014-11-07

 - First release.
