@@ -2,6 +2,8 @@ Revision history for Perl extension MooX-BuildArgs.
 
 {{$NEXT}}
 
+ - Document clear_build_args() in MooX::BuildArgs.
+
 0.08 2019-04-23T18:48:18Z
 
  - Add clear_build_args() to MooX::BuildArgs.
